adding all profile details

--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
     <span>GitHub</span>
   </a>
 
-  <a href="https://pdek1991.github.io/Pdek1991/" target="_blank" class="inner-glass flex items-center gap-2">
+  <a href="https://pdek1991.duckdns.org/" target="_blank" class="inner-glass flex items-center gap-2">
     <img src="https://img.icons8.com/color/48/000000/domain.png" alt="Portfolio">
     <span>Portfolio</span>
   </a>
