--- a/index.html
+++ b/index.html
@@ -784,6 +784,8 @@
 
 
 <!-- Inner Glass Buttons -->
+<section id="contact" class="py-16 px-6 md:px-12">
+
 <div class="flex flex-nowrap justify-center gap-6 px-8 py-4">
   <a href="mailto:pdek1991@gmail.com" class="inner-glass flex items-center gap-2">
     <img src="https://img.icons8.com/color/48/000000/email.png" alt="Email">
@@ -820,7 +822,8 @@
     <span>+91 98233 40379</span>
   </a>
 </div>
-
+</section>
+	
 <style>
 .inner-glass {
   backdrop-filter: blur(30px) saturate(200%);
